--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-p5-wrapper": "^4.1.2",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
